--- a/formulário.html
+++ b/formulário.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Formulário de cadastro</h1>
     <form>
-        <label for="nome">Nome</label> <input type="Nome"><br>
-        <label for="email">E-mail</label><input id="email"><br>
-        <label for="senha">Senha</label><input type="password">
+        <label for="text">Nome</label><input type="text" id="text"> <br>
+        <label for="email">E-mail</label><input type="email" id="email"> <br>
+        <label for="senha">Senha</label><input type="password" id="password"><br>
         <br>
-        <button>Cadastrar</button>
+        <button>Cadastrar</button><input type="submit">
     </form>
 </body>
 </html>
