--- a/formulário.html
+++ b/formulário.html
@@ -10,9 +10,9 @@
     <form>
         <label for="text">Nome</label><input type="text" id="text"> <br>
         <label for="email">E-mail</label><input type="email" id="email"> <br>
-        <label for="senha">Senha</label><input type="password" id="password"><br>
+        <label for="password">Senha</label><input type="password" id="password"><br>
         <br>
-        <button>Cadastrar</button><input type="submit">
-    </form>
+        <button type="submit" form="form1" value="submit">Cadastrar</button>
+    </form>    
 </body>
 </html>
